--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/schedule": "^0.4.2",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/websockets": "^7.6.13",
     "dotenv": "^8.2.0",
     "redis": "^3.0.2",
